# arxiv_papers

./: .gitignore  LICENSE  README.md  config.example.toml  get_arxiv_papers.py  pyproject.toml
src/: arxiv_papers.py  main.py
